--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm align-self-center mt-1">
+                    <a class="btn btn-warning btn-block btn-lg" href="#reservetable" role="button">Reserve Table</a>
+                </div>
             </div>
         </div>
     </header>
@@ -73,9 +76,9 @@
             </div>
             <div class="col col-sm col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Weekend Grand Buffet">
-                    <div class="media-body">
-                        <h2 class="mt-0">Weekend Grand Buffet</h2>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center order-sm-last" src="img/buffet.png" alt="Weekend Grand Buffet">
+                    <div class="media-body order-sm-first">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span> </h2>
                         <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing
                             appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99
                             per person </p>
@@ -101,6 +104,68 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-8 align-self-center">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <dl class="row">
+                            <form id="reservetable" class="ml-3 mr-3">
+                                <div class="form-group row align-self-center">
+                                    <label for="numberofguest" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                                    <div class="col-12 col-sm-8">
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest1" value="1">
+                                            <label class="form-check-label" for="numberofguest1">1</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest2" value="2">
+                                            <label class="form-check-label" for="numberofguest2">2</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest3" value="3">
+                                            <label class="form-check-label" for="numberofguest3">3</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest4" value="4">
+                                            <label class="form-check-label" for="numberofguest4">4</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest5" value="5">
+                                            <label class="form-check-label" for="numberofguest5">5</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest6" value="6">
+                                            <label class="form-check-label" for="numberofguest6">6</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row align-items-center">
+                                    <label for="date" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                                    <div class="col-12 col-sm-5">
+                                        <div class="input-group">
+                                            <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-sm-5">
+                                        <div class="input-group">
+                                           <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="offset-sm-2 col-md-10">
+                                        <button type="submit" class="btn btn-primary">Reserve</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <footer class="footer">
