--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
     </nav>
-
+    <!-- Login Modal -->
         <div id="loginModal" class="modal fade" role="dialog">
             <div class="modal-dialog modal-lg" role="content">
                 <!-- Modal content-->
@@ -79,6 +79,85 @@
             </div>
         </div>
 
+        <!-- Reserve Modal Form -->
+        <div id="reserveModal" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-lg" role="content">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Reserve a Table</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body mr-3 ml-3">
+                        <form id="reserveModalForm">
+                            <div class="form-group row align-items-center">
+                                <label for="numberofguest" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                                <div class="col-12 col-sm-8">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest1" value="1">
+                                        <label class="form-check-label" for="numberofguest1">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest2" value="2">
+                                        <label class="form-check-label" for="numberofguest2">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest3" value="3">
+                                        <label class="form-check-label" for="numberofguest3">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest4" value="4">
+                                        <label class="form-check-label" for="numberofguest4">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest5" value="5">
+                                        <label class="form-check-label" for="numberofguest5">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest6" value="6">
+                                        <label class="form-check-label" for="numberofguest6">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row align-items-center">
+                                <label class="col-12 col-sm-2 col-form-label">Section</label>
+                                <div class="col-12 col-sm">
+                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success btn-sm active">
+                                            <input type="radio" name="options" id="option1" autocomplete="off" checked>
+                                            Non-smoking
+                                        </label>
+                                        <label class="btn btn-danger btn-sm">
+                                            <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row align-items-center">
+                                <label for="date" class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                                <div class="col-12 col-sm-4">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                    </div>
+                                </div>
+                                <div class="col-12 col-sm-4">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-sm-2 col-md-10">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -91,8 +170,7 @@
                 </div>
                 <div class="col-12 col-sm align-self-center mt-1">
                     <a role="button" class="btn btn-warning btn-block btn-lg" 
-                        data-toggle="tooltip" data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reservetable">Reserve Table
+                        data-toggle="modal" data-target="#reserveModal" href="#reservetable">Reserve Table
                     </a>
                 </div>
             </div>
@@ -203,65 +281,8 @@
             </div>
         </div>
 
-        <div class="row row-content justify-content-center">
-            <div class="col-12 col-sm-8 align-self-center">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <dl class="row">
-                            <form id="reservetable" class="ml-3 mr-3">
-                                <div class="form-group row align-self-center">
-                                    <label for="numberofguest" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
-                                    <div class="col-12 col-sm-8">
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest1" value="1">
-                                            <label class="form-check-label" for="numberofguest1">1</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest2" value="2">
-                                            <label class="form-check-label" for="numberofguest2">2</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest3" value="3">
-                                            <label class="form-check-label" for="numberofguest3">3</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest4" value="4">
-                                            <label class="form-check-label" for="numberofguest4">4</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest5" value="5">
-                                            <label class="form-check-label" for="numberofguest5">5</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="numberofguest" id="numberofguest6" value="6">
-                                            <label class="form-check-label" for="numberofguest6">6</label>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group row align-items-center">
-                                    <label for="date" class="col-12 col-sm-2 col-form-label">Date and Time</label>
-                                    <div class="col-12 col-sm-5">
-                                        <div class="input-group">
-                                            <input type="text" class="form-control" id="date" name="date" placeholder="Date">
-                                        </div>
-                                    </div>
-                                    <div class="col-12 col-sm-5">
-                                        <div class="input-group">
-                                           <input type="text" class="form-control" id="time" name="time" placeholder="Time">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="offset-sm-2 col-md-10">
-                                        <button type="submit" class="btn btn-primary">Reserve</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </dl>
-                    </div>
-                </div>
-            </div>
+        <div>
+            
         </div>
 
     </div>
@@ -313,11 +334,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 
 </body>
 
