--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
               </ul>
             <span class="navbar-text">
-                <a data-toggle="modal" data-target="#loginModal">
+                <a id="loginButton">
                     <span class="fa fa-sign-in"></span> Login</a>
             </span>
             </div>
@@ -88,8 +88,8 @@
                         <h4 class="modal-title">Reserve a Table</h4>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
-                    <div class="modal-body mr-3 ml-3">
-                        <form id="reserveModalForm">
+                    <div class="modal-body">
+                        <form id="reserveModalForm  mr-3 ml-3">
                             <div class="form-group row align-items-center">
                                 <label for="numberofguest" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
                                 <div class="col-12 col-sm-8">
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-12 col-sm align-self-center mt-1">
                     <a role="button" class="btn btn-warning btn-block btn-lg" 
-                        data-toggle="modal" data-target="#reserveModal" href="#reservetable">Reserve Table
+                        id="reserveButton" href="#reservetable">Reserve Table
                     </a>
                 </div>
             </div>
@@ -351,6 +351,12 @@
                     $("#carouselButton").children("span").removeClass('fa-play');
                     $("#carouselButton").children("span").addClass('fa-pause');
                 }
+            });
+            $('#reserveButton').click(function () {
+                $('#reserveModal').modal('show');
+            });
+            $('#loginButton').click(function () {
+                $('#loginModal').modal('show');
             });
         });
     </script>
